# Alpha-ROS2

./: .env  .gitignore  .gitmodules  README.md  colcon_defaults.yaml  startSimulation.sh  stopSimulation.sh
config/: NOTE.md
config/FastDDS/: config.xml  fast_dds_setup.sh
config/gz_ros_bridge/: baylands-gz_alpha_minus_1.YAML  grasslands-gz_alpha_minus_1.YAML  grasslands-gz_alpha_minus_2.YAML  lawn-gz_alpha_minus_1.YAML  obstacle_tunnel-gz_alpha_minus_2.YAML
pyvenv/: requirements.txt
scripts/: global.sh  setupROS2Build.sh  setupROS2Terminal.sh  startSimulation.sh  stopSimulation.sh
src/Control/acrobatic_oa/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/Control/acrobatic_oa/acrobatic_oa/: acrobatic_oa.py  acrobatic_utils.py  normalizer.py
src/Control/acrobatic_oa/src/: main.cpp
src/Control/advance_control/: package.xml  setup.cfg  setup.py
src/Control/advance_control/advance_control/: advance_control.py  web_socket_controller.py
src/Control/advance_control/resource/: controller.html
src/Control/finalize_control/: CHANGELOG.md  CMakeLists.txt  package.xml
src/Control/pygame_control/: package.xml  setup.cfg  setup.py
src/Control/pygame_control/pygame_control/: pygame_control.py  pygame_control_dum.py.bak
src/Control/reactive_oa/: CHANGELOG.md  CMakeLists.txt  package.xml
src/Control/reactive_oa/backup/: reactive_oa.cpp  reactive_oa.hpp
src/Control/reactive_oa/include/reactive_oa/: reactive_oa.hpp
src/Control/reactive_oa/src/: main.cpp  reactive_oa.cpp  test.cpp
src/Control/simulation_control/: CMakeLists.txt  package.xml
src/Logging/record_acrobatic/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/Logging/record_acrobatic/include/record_acrobatic/: add_nood_control.hpp  record_acrobatic.hpp
src/Logging/record_acrobatic/record_acrobatic/: add_noob_control.py  record_acrobatic.py  record_acrobatic.py.temp
src/Logging/record_acrobatic/src/: add_noob_control.cpp  record_acrobatic.cpp
src/MapHandler/local_mapping/: CMakeLists.txt  package.xml
src/MapHandler/local_mapping/include/local_mapping/: local_mapping.hpp  visualizer_lidar2d.hpp
src/MapHandler/local_mapping/src/: local_mapping.cpp  visualizer_lidar2d.cpp
src/Mapping/high_spatial/: CMakeLists.txt  package.xml
src/Mapping/low_spacial/: CMakeLists.txt  package.xml
src/Mapping/low_spatial/: CHANGELOG.md  CMakeLists.txt  package.xml
src/Mapping/low_spatial/config/: low_spatial.yaml
src/Mapping/low_spatial/include/low_spatial/: low_spatial.hpp
src/Mapping/low_spatial/src/: component.cpp  low_spatial.cpp  main.cpp
src/Perception/spacial_perception/: CMakeLists.txt  package.xml
src/SensorHandler/contact_parser/: CMakeLists.txt  package.xml
src/SensorHandler/contact_parser/include/contact_parser/: contact_parser.hpp
src/SensorHandler/contact_parser/src/: contact_parser.cpp  main.cpp
src/SensorHandler/depth_cam/: CHANGELOG.md  CMakeLists.txt  package.xml
src/SensorHandler/depth_cam/include/depth_cam/: depth_cam.hpp  depth_cam_threads.hpp
src/SensorHandler/depth_cam/src/: component.cpp  depth_cam.cpp  depth_cam_threads.cpp  main.cpp
src/SensorHandler/fuse_perception/: CMakeLists.txt  package.xml
src/SensorHandler/fuse_perception/include/fuse_perception/: fuse_perception.hpp
src/SensorHandler/fuse_perception/src/: fuse_perception.cpp  main.cpp
src/SensorHandler/lidar_2d_handler/: CMakeLists.txt  package.xml
src/SensorHandler/lidar_2d_handler/include/lidar_2d_handler/: lidar2d.hpp
src/SensorHandler/lidar_2d_handler/src/: lidar2d.cpp  main.cpp
src/SensorHandler/octo_map/: CMakeLists.txt  package.xml
src/SensorHandler/octo_map/include/octo_map/: octo_map.hpp  octo_map_demo.hpp  octo_map_threads.hpp
src/SensorHandler/octo_map/src/: component.cpp  main.cpp  octo_map.cpp  octo_map_demo.cpp  octo_map_tf.cpp  octo_map_threads.cpp
src/Simulation/obstacle_tunnel/: CHANGELOG.md  CMakeLists.txt  package.xml
src/Simulation/simulation_control/: CMakeLists.txt  package.xml
src/Simulation/simulation_control/include/simulation_control/: simulation_control.hpp
src/Simulation/simulation_control/src/: simulation_control.cpp
src/Simulation/simulation_overview/: package.xml  setup.cfg  setup.py
src/Simulation/simulation_overview/simulation_overview/: simulation_overview.py
src/Visualizer/hazard_voxels/: package.xml  setup.cfg  setup.py
src/Visualizer/hazard_voxels/hazard_voxels/: hazard_voxels.py  point_cloud_spam.py
src/Visualizer/rviz_contour/: package.xml  setup.cfg
src/Visualizer/rviz_contour/rviz_contour/: rviz_contour.py  rviz_contour_points.py
src/Visualizer/vfh_sphere/: CHANGELOG.md  package.xml  setup.cfg  setup.py
src/alpha_msgs/: CHANGELOG.md  CMakeLists.txt  package.xml
src/alpha_msgs/msg/AirByte/: SkyDataReiceiver.msg
src/alpha_msgs/msg/Sensor/: ContactSensor.msg  FusePerception.msg  Lidar2dContour.msg  Lidar2dObstacle.msg  Lidar2dSector.msg  VectorFieldHistogram.msg  VoxelBlock.msg
src/global_utils/: CHANGELOG.md  CMakeLists.txt  package.xml
src/global_utils/include/global_utils/: alpha_brain.hpp  global.hpp  surrounding.hpp  system_config.hpp  utils.hpp
src/global_utils/src/: alpha_brain.cpp  global.cpp  surrounding.cpp  system_config.cpp  utils.cpp
src/launch_utils/: CHANGELOG.md  package.xml  setup.py
src/launch_utils/launch_utils/: advance_control_launch.py  alpha_brain.py  alpha_brain_launch.py  depth_cam_test_launch.py  gather_data_launch.py  lidar_2d_handler_launch.py  phone_control_launch.py  pygame_control_launch.py  reactive_oa_launch.py  reactive_oa_test.py  reactive_oa_test_static.py  record_acrobatic_expert.py  record_acrobatic_noob.py  ros_gz_bridge_launch.py  (+2 more)
src/python_utils/: package.xml  setup.cfg  setup.py
src/ros2_msgs/: CMakeLists.txt  package.xml
src/ros2_msgs/msg/Control/: ControlInterface.msg  ReactiveOACorrection.msg  VirtualControlBridge.msg.bak
src/ros2_msgs/msg/CustomType/: Point32Array.msg
src/ros2_msgs/msg/Logger/: RecordControl.msg
src/ros2_msgs/msg/Sensor/: FusePerception.msg  Lidar2dContour.msg  Lidar2dObstacle.msg  Lidar2dPoint.msg  Lidar2dSector.msg  VoxelBlock.msg
(+16 files in other folders)
