<package format="3">
  <name>alpha_msgs</name>
  <version>0.1.0</version>
  <description>Alpha drone custom ROS2 messages</description>
  <maintainer email="trongdat4work@gmail.com">Trong Data</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Required for Jazzy -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
