<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>local_mapping</name>
  <version>0.0.0</version>
  <description>Local mapping on drone</description>
  <maintainer email="trongdat4work@gmail.com">mr_lemon</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>ros2_msgs</depend>
  <depend>global_utils</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
