<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simulation_control</name>
  <version>0.0.1</version>
  <description>FPV view and world control for Gazebo simulation</description>
  <maintainer email="trongdat4work@gmail.com">mr_lemon</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>alpha_msgs</depend>
  <depend>ros_gz_interfaces</depend>
  <depend>global_utils</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
