<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simulation_overview</name>
  <version>0.0.1</version>
  <description>A TPV overview window for Simulation</description>
  <maintainer email="trongdat4work@gmail.com">mr_lemon</maintainer>
  <license>Proprietary</license>

  <exec_depend>rclpy</exec_depend>
  <depend>alpha_msgs</depend>
  <depend>ros_gz_interfaces</depend>
  <depend>global_utils</depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
